Using the SPARC MAPcore youtube channel to host the unlisted Physiome movie.
This allows us more control and less overlay than what we get from the ABI channel.

--- a/themes/pj/templates/index.html
+++ b/themes/pj/templates/index.html
@@ -33,10 +33,7 @@
 
 <div style = "text-align: center; color:#580078">
 
-<video width="960" height="720" controls>
-    <source src="{{SITEURL}}/theme/images/PhysiomeVideo_with_thumbnail.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-</video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/wuhLl_DpQ5c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 
