--- a/themes/pj/templates/base.html
+++ b/themes/pj/templates/base.html
@@ -75,6 +75,6 @@
       <a style="display: block; color:white" href="mailto:physiome@physiomeproject.org">Contact us: physiome@physiomeproject.org</a>
       <a style="color:white; display: block" href="{{SITEURL}}/editorial-board.html">Meet our Editorial Board</a>
 
-      <p>These are our collaborators: <a href="https://www.vph-institute.org/"><img src="{{SITEURL}}/theme/images/Horizonal_Online.png" alt="VPH logo" style="width:22%;height:22%;"></a> <a href="http://www.iups.org/"><img src="{{SITEURL}}/theme/images/iups.svg" alt="Physiome logo" style="width:8%;height:8%;"></a> <a href="https://www.auckland.ac.nz/en/abi.html"><img src="{{SITEURL}}/theme/images/ABI_Positive_RGB.jpg" alt="ABI logo" style="width:15%;height:15%;"></a> <a href="https://www.digital-science.com/"><img src="{{SITEURL}}/theme/images/ds-logo-bw.png" alt="Digital Science logo" style="width:15%;height:15%;"></a>   </p>
+      <p>These are our collaborators: <a href="https://www.vph-institute.org/"><img src="{{SITEURL}}/theme/images/Horizonal_Online.png" alt="VPH logo" style="width:22%;height:22%;"></a> <a href="http://www.iups.org/"><img src="{{SITEURL}}/theme/images/iups.svg" alt="Physiome logo" style="width:8%;height:8%;"></a> <a href="https://www.auckland.ac.nz/en/abi.html"><img src="{{SITEURL}}/theme/images/abi-hc-rgb.png" alt="ABI logo" style="width:30%;height:30%;"></a> <a href="https://www.digital-science.com/"><img src="{{SITEURL}}/theme/images/ds-logo-bw.png" alt="Digital Science logo" style="width:15%;height:15%;"></a>   </p>
   </footer>
 </html>
