--- a/themes/pj/templates/index.html
+++ b/themes/pj/templates/index.html
@@ -27,7 +27,7 @@
       <a <button href="instructions-to-authors.html" class="button">How do I submit a paper?</button> </a>
       
   </div>
-    <div style="text-align: center; font-size: 16px">(Accepting submissions from 1st of March 2020)</div>
+    <div style="text-align: center; font-size: 16px">(Accepting submissions from December 2020)</div>
   
   </p>
 </div>
@@ -42,12 +42,6 @@
 <div style = "text-align: left; color:#580078">
 
     
-
-  <h3>Latest articles</h3>
-
-  {{ pub.pubtable(articles_page.object_list[:9]) }}
-
-  <p><a style="color:#580078" href="{{SITEURL}}/articles">See all articles...</a></p>
 
 </div>
 
