Empty ORCIDs fixed
Empty ORCIDs no longer displays icon in the author list.

--- a/themes/pj/templates/shared/pub.html
+++ b/themes/pj/templates/shared/pub.html
@@ -40,7 +40,9 @@
     {% for author in pub.pubauthors %} 
       {{author}}
         {% if pub.pubauthorsorcid %}
-                <a href="https://orcid.org/{{pub.pubauthorsorcid[loop.index0]}}"><img alt="ORCID logo" src="https://orcid.org/sites/default/files/images/orcid_16x16.png" width="16" height="16" hspace="4" /></a>
+{% if (pub.pubauthorsorcid[loop.index0])|length > 8 %}
+    <a href="https://orcid.org/{{pub.pubauthorsorcid[loop.index0]}}"><img alt="ORCID logo" src="https://orcid.org/sites/default/files/images/orcid_16x16.png" width="16" height="16" hspace="4" /></a>
+{% endif %}
         {% endif %}
       {% if not loop.last %}
 	,
