New design of article pages
Header with dates and kind of article.
Abstract not a header. 
Highlighted how to cite.
No buttons.
Changed some font sizes.

--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -2,61 +2,54 @@
 {% import 'shared/pub.html' as pub %}
 {% block title %} {{page.title}} {% endblock %}
 {% block body %}
+<head>
+<style>
 
-{{article.kind}}
+/* Header/Logo Title */
+.header {font-size: 0.8em;}
 
-  <h3>{{article.title}}</h3>
-<p>
-  {{pub.authorlist(article)}}
-</p>
+/* Page Content */
+.content {}
+</style>
+</head>
 
-<p>
-Published: {{article.publishdate}}, Submitted: {{article.submissiondate}}, Last edited: {{article.lastpublishdate}}
-</p>
+<div class="header">
 
-{% if article.doi %}
-<p>
-	To cite this article, use the DOI: <a style="color:#580078" href="https://doi.org/{{article.doi}}">{{article.doi}}</a>
-</p>
-{% endif %}
-<p>
-
-
-<div style = "text-align: left;">
-    
-    <style>
-        .button {
-            border: 1px solid #580078;
-            background-color: #580078;
-            color: white;
-            padding: 15px 25px;
-            text-align: center;
-            font-size: 16px;
-            vertical-align: middle;
-            cursor: pointer;
-            margin-bottom: 0;
-        }
-    
-        </style>
-    
-    {% if article.fulltexturl %}
-    <a <button href="{{article.fulltexturl}}" class="button">Fulltext</button> </a>
-    {% endif %}
-    
-    {% if article.archiveurl %}
-    <a <button href="{{article.archiveurl}}" class="button">figshare archive</button> </a>
-    {% endif %}
-    
-    {% if article.pmrurl %}
-    <a <button href="{{article.pmrurl}}" class="button">PMR workspace</button> </a>
-    {% endif %}
-    
+<div style='float: left;'>
+  Open Access<br>
+  Reproducible Model<br>
+  {{article.kind}}
 </div>
 
+<div style='float: right; text-align: right'>
+  <p>Published: {{article.publishdate}}<br>
+  {% if article.lastpublishdate %}
+  Last edited: {{article.lastpublishdate}}</p>
+  {% endif %}
+</div>
+</div>
 
+<br>
+<br>
+<br>
+
+<div class="content">
+  <h3>{{article.title}}</h3>
+<p style='font-size: 1.2em;'>
+  <i>{{pub.authorlist(article)}}</i>
+</p>
+</div>
+
+{% if article.doi %}
+<p style="background-color:#E0E0E0;">
+To cite this article, use the DOI: <a style="color:#580078" href="https://doi.org/{{article.doi}}">{{article.doi}}</a> <br>
+All <i>Physiome</i> articles are published as a collection containing the manuscript as a pdf file and the model implementation as an <a style="color:#580078" href="http://co.mbine.org/standards/omex">omex file</a>. When citing a <i>Physiome</i> article, the whole collection should be cited.
+</p>
+{% endif %}
+
+<p>
 {% if article.abstract %}
-<h3>Abstract</h3>
-<p>{{article.abstract}}</p>
+<b>Abstract:</b> {{article.abstract}}</p>
 {% endif %}
 
 {% if article.primarypaper %}
