--- a/themes/pj/templates/shared/pub.html
+++ b/themes/pj/templates/shared/pub.html
@@ -1,19 +1,11 @@
 {% macro publisting(pub_article) %}
+
 <tr>
   <td class="medium-7 columns">
     <p style="margin-bottom:0px"><a href="{{SITEURL}}/{{pub_article.url}}">{{pub_article.title}}</a></p>
     <p>
       {{authorlist(pub_article)}}
     </p>
-  </td>
-  <td class="medium-5 columns">
-    {% if pub_article.fulltexturl %}
-    <span><a <button href="{{pub_article.fulltexturl}}" class="button">Fulltext</button> </a></span>
-    {% endif %}
-    {% if pub_article.archiveurl %}
-    <span><a <button href="{{article.archiveurl}}" class="button">figshare archive</button> </a></span>
-    {% endif %}
-
   </td>
 </tr>
 {% endmacro %}
@@ -30,6 +22,7 @@
 
 {% endmacro %}
 
+
 {% macro authorlist(pub) %}
   {% if pub.pubauthor %}
     {{pub.pubauthor}}
@@ -37,14 +30,15 @@
     {% for author in pub.pubauthors %} 
       {{author}}
         {% if pub.pubauthorsorcid %}
-{% if (pub.pubauthorsorcid[loop.index0])|length > 8 %}
-    <a href="https://orcid.org/{{pub.pubauthorsorcid[loop.index0]}}"><img alt="ORCID logo" src="https://orcid.org/sites/default/files/images/orcid_16x16.png" width="16" height="16" hspace="4" /></a>
-{% endif %}
+            {% if (pub.pubauthorsorcid[loop.index0])|length > 8 %}
+                <a href="https://orcid.org/{{pub.pubauthorsorcid[loop.index0]}}"><img class="b" alt="ORCID logo" src="https://orcid.org/sites/default/files/images/orcid_16x16.png" width="16" height="16" /></a>
+            {% endif %}
         {% endif %}
-      {% if not loop.last %}
-	,
+        {% if not loop.last %}
+      ,
       {% endif %}
     {% endfor %}
   {% else %}
   {% endif %}
 {% endmacro %}
+
