Feedback email articles
Added link to article pages so that users can report errors.

--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -109,7 +109,15 @@
   {% endif %}
 
 <br>
+
+<span><Message><i>Is there something wrong with this publication? </i><a href="mailto:physiome-curators@physiomeproject.org" ?subject=Query about submission {{slug}}><i>Contact our curators</i></a>.</Message></span>
+
+
 <br>
+<br>
+
+
+
 
 {% if article.pdfid %}
 <center>
