tweaking email link for errors with articles

--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -110,7 +110,7 @@
 
 <br>
 
-<span><Message><i>Is there something wrong with this publication? </i><a href="mailto:physiome-curators@physiomeproject.org" ?subject=Query about submission {{slug}}><i>Contact our curators</i></a>.</Message></span>
+<span><Message><i>Is there something wrong with this publication? </i><a href="mailto:physiome-curators@physiomeproject.org?subject=Query about article {{article.doi}}"><i>Contact our curators</i></a>.</Message></span>
 
 
 <br>
